continue herconomy page

--- a/herconomy.html
+++ b/herconomy.html
@@ -171,9 +171,127 @@
             <h4 class="title">Wire Frames</h4>
             <p class="description">
               I converted paper wireframes to digital ones and prepared a
-              clickable prototype for the first user test. Below you will find the
-              highlights of some wireframes for the user flow used in the test.
+              clickable prototype for the first user test. Below you will find
+              the highlights of some wireframes for the user flow used in the
+              test.
             </p>
+            <div class="wireframes-wrapper">
+              <div class="row">
+                <div class="image">
+                  <img src="/assets/svgs/wireframe-1.svg" alt="" />
+                </div>
+                <div class="image">
+                  <img src="/assets/svgs/wireframe-2.svg" alt="" />
+                </div>
+              </div>
+              <div class="row">
+                <div class="image">
+                  <img src="/assets/svgs/wireframe-3.svg" alt="" />
+                </div>
+                <div class="image">
+                  <img src="/assets/svgs/wireframe-4.svg" alt="" />
+                </div>
+              </div>
+              <div class="row">
+                <div class="image">
+                  <img src="/assets/svgs/wireframe-5.svg" alt="" />
+                </div>
+                <div class="image">
+                  <img src="/assets/svgs/wireframe-6.svg" alt="" />
+                </div>
+              </div>
+              <div class="row">
+                <div class="image">
+                  <img src="/assets/svgs/wireframe-7.svg" alt="" />
+                </div>
+                <div class="image">
+                  <img src="/assets/svgs/wireframe-8.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="user-experience">
+        <div class="banner"><h3>User Experience</h3></div>
+        <div class="experience-details">
+          <p>
+            A good design starts with conversations and sketches & wireframes. I
+            started the design with interviews and brainstorming with the
+            in-house tech team. After collecting insightful data, I started
+            creating test prototypes.
+          </p>
+          <p>
+            From the research I found out that users often find it difficult to
+            trust financial apps, so due to this, I was tasked with designing a
+            simple and easy-to-use interface that also reduces cognitive
+            overload as this could lead to overwhelming users and therefore lead
+            to drop-offs. the reason why I strategically planned the overall
+            flow of their journey, right from the start. After dozens of
+            iterations, I reached something like this:
+          </p>
+        </div>
+        <div class="experience-image-wrapper">
+          <div class="image">
+            <img src="/assets/svgs/exp-1.svg" alt="" />
+          </div>
+          <div class="image">
+            <img src="/assets/svgs/exp-2.svg" alt="" />
+          </div>
+          <div class="image">
+            <img src="/assets/svgs/exp-3.svg" alt="" />
+          </div>
+          <div class="image">
+            <img src="/assets/svgs/exp-4.svg" alt="" />
+          </div>
+          <div class="image">
+            <img src="/assets/svgs/exp-5.svg" alt="" />
+          </div>
+          <div class="image">
+            <img src="/assets/svgs/exp-6.svg" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="usability-testing">
+        <div class="left-side">
+          <h3>Usability Testing</h3>
+        </div>
+        <div class="right-side">
+          <div class="text-content">
+            <p>
+              To figure out what specific difficulties users have when they try
+              to complete core tasks: enter the app, set up automatic saving,
+              and add funds
+            </p>
+            <p>
+              <b>Methodology</b>: unmoderated usability study <br />
+              <b>Participants</b>: Tech-savvy <br />
+              <b>women Age</b>: 18 - 55 <br />
+              <b>Gender</b>: Women Region: Lagos, Nigeria
+            </p>
+
+            <p><b>Insights:</b></p>
+            <ul>
+              <li>
+                <span>1.</span>
+                <span
+                  >Users weren’t too comfortable inputting personal details from
+                  onboarding as they will like to get used to the app
+                  first</span
+                >
+              </li>
+              <li>
+                <span>2.</span>
+                <span
+                  >Users want to be able to set their own frequency and amount
+                  of saving automatically.</span
+                >
+              </li>
+              <li>
+                <span>3.</span>
+                <span>Users want to be able to add funds quickly</span>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
