--- a/index.html
+++ b/index.html
@@ -62,10 +62,14 @@
             <h1>Joseph Kekapoh</h1>
             <div class="bio">
               <p>
-                I'm a product designer based in Lagos, Nigeria with experience
-                in delivering end-to-end UX/UI design for software products. I'm
-                passionate about improving the lives of others through design
-                and am constantly looking to learn new things everyday.
+                As a product designer based in Lagos, Nigeria, I have a strong
+                track record of delivering intuitive and engaging UX/UI designs
+                for software products. My passion for using design to improve
+                people's lives drives me to constantly seek out new learning
+                opportunities and stay up-to-date on the latest design trends
+                and techniques. I believe that by creating intuitive and
+                user-centered designs, I can help make a positive impact on the
+                world around me.
               </p>
               <div class="arrow">
                 <img alt="" src="assets/svgs/down-arrow.svg" />
