--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
         <div class="container">
           <nav>
             <div class="logo-side">
-              <p>Joseph Kekapoh</p>
+              <a href="/">Joseph Kekapoh</a>
             </div>
             <div class="links-side">
               <ul>
                 <li>
-                  <a href="/">projects</a>
+                  <a href="/#projects">projects</a>
                 </li>
                 <li>
                   <a href="/about.html">about me</a>
                 </li>
                 <li>
-                  <a href="/">contact</a>
+                  <a href="/#contact">contact</a>
                 </li>
               </ul>
               <button class="menu-icon">
@@ -79,28 +79,28 @@
         </div>
       </header>
       <section class="projects-section">
-        <div class="container">
+        <div class="container" id="projects">
           <h2 class="section-title">Recent Projects</h2>
           <div class="projects">
             <div class="project">
               <div class="project-image"></div>
               <div class="project-content">
-                <h3>Herconomy</h3>
+                <h3><a href="/herconomy.html">Herconomy</a></h3>
                 <p>Savings App for Women</p>
               </div>
-            </div>
+            <!-- </div>
             <div class="project">
               <div class="project-image"></div>
               <div class="project-content">
                 <h3>Herconomy</h3>
                 <p>Savings App for Women</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
       <footer>
-        <div class="container">
+        <div class="container" id="contact">
           <div class="footer-header">
             <p>Let’s Work together</p>
             <p>Send a message</p>
@@ -112,13 +112,13 @@
           </h2>
           <div class="footer-location">
             <div class="socials">
-              <a href="#">
+              <a target="_blank" href="https://behance.net/josephkekapoh">
                 <img alt="" src="assets/svgs/be.svg" />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://dribbble.com/kekapoh">
                 <img alt="" src="assets/svgs/dribbble.svg" />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://instagram.com/kekk.kom/">
                 <img alt="" src="assets/svgs/in.svg" />
               </a>
             </div>
