--- a/herconomy.html
+++ b/herconomy.html
@@ -36,18 +36,18 @@
       <div class="container">
         <nav class="color-black">
           <div class="logo-side">
-            <p>Joseph Kekapoh</p>
+            <a href="/">Joseph Kekapoh</a>
           </div>
           <div class="links-side">
             <ul>
               <li>
-                <a href="/">projects</a>
+                <a href="/#projects">projects</a>
               </li>
               <li>
-                <a href="/">about me</a>
+                <a href="/about.html">about me</a>
               </li>
               <li>
-                <a href="/">contact</a>
+                <a href="/#contact">contact</a>
               </li>
             </ul>
             <button class="menu-icon">
@@ -296,7 +296,7 @@
         </div>
       </section>
       <footer>
-        <div class="container">
+        <div class="container" id="contact">
           <div class="footer-header">
             <p>Let’s Work together</p>
             <p>Send a message</p>
@@ -308,13 +308,13 @@
           </h2>
           <div class="footer-location">
             <div class="socials">
-              <a href="#">
+              <a target="_blank" href="https://behance.net/josephkekapoh">
                 <img alt="" src="assets/svgs/be.svg" />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://dribbble.com/kekapoh">
                 <img alt="" src="assets/svgs/dribbble.svg" />
               </a>
-              <a href="#">
+              <a target="_blank" href="https://instagram.com/kekk.kom/">
                 <img alt="" src="assets/svgs/in.svg" />
               </a>
             </div>
