add remaining design for herconomy

--- a/herconomy.html
+++ b/herconomy.html
@@ -295,6 +295,67 @@
           </div>
         </div>
       </section>
+      <section class="product-intro product-solving-problems">
+        <div class="container">
+          <div class="product-persona">
+            <h4 class="title">Solving UX Problems</h4>
+            <p class="description">
+              After the usability study I took into account the insights based
+              on users' feedback and adjusted the design of main screens and
+              flows.
+            </p>
+            <p class="description">Here you will find some examples.</p>
+          </div>
+          <div class="automated-savings">
+            <div>
+              <div class="text-content">
+                <p>
+                  <span>Problem:</span> Users want to be able to set their own
+                  frequency and amount of saving automatically.
+                </p>
+                <p>
+                  <span>Solution:</span> I added a custom button that will take
+                  users to another screen where users can input thier desired
+                  amount they want to save at a frequency chosen by them also.
+                </p>
+              </div>
+              <h3 class="title">Automatic Savings</h3>
+            </div>
+            <div>
+              <div>
+                <img src="/assets/images/auto-save-1.png" alt="" />
+                <p>Before Userbility Testing</p>
+              </div>
+              <img src="/assets/images/arrow.png" alt="" />
+              <div>
+                <img src="/assets/images/auto-save-2.png" alt="" />
+                <p>After Userbility Testing</p>
+              </div>
+              <div>
+                <img src="/assets/images/auto-save-3.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="product-intro visual-design">
+        <div class="container">
+          <div class="product-persona">
+            <h4 class="title">Visual Design</h4>
+            <p class="description">
+              After all the wireframes were designed I moved on to styling the
+              user interface of the app. The main creative direction I was given
+              was that the app should be easy to use and understand. Beyond
+              that, I was given a free hand over the app’s look and feel. I
+              focused on designing an interface that was simple, clean, and
+              beautiful.
+            </p>
+          </div>
+        </div>
+        <div class="image-wrapper"><img src="/assets/images/visual-1.png" alt=""></div>
+        <div class="image-wrapper"><img src="/assets/images/visual-2.png" alt=""></div>
+        <div class="image-wrapper"><img src="/assets/images/visual-3.png" alt=""></div>
+      </section>
       <footer>
         <div class="container" id="contact">
           <div class="footer-header">
