--- a/herconomy.html
+++ b/herconomy.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <div class="content" data-template="product">
+    <div class="content" data-template="herconomy">
       <div class="container">
         <nav class="color-black">
           <div class="logo-side">
