--- a/herconomy.html
+++ b/herconomy.html
@@ -326,7 +326,9 @@
                 <img src="/assets/images/auto-save-1.png" alt="" />
                 <p>Before Userbility Testing</p>
               </div>
-              <img src="/assets/images/arrow.png" alt="" />
+              <div>
+                <img src="/assets/images/arrow.png" alt="" />
+              </div>
               <div>
                 <img src="/assets/images/auto-save-2.png" alt="" />
                 <p>After Userbility Testing</p>
@@ -352,9 +354,15 @@
             </p>
           </div>
         </div>
-        <div class="image-wrapper"><img src="/assets/images/visual-1.png" alt=""></div>
-        <div class="image-wrapper"><img src="/assets/images/visual-2.png" alt=""></div>
-        <div class="image-wrapper"><img src="/assets/images/visual-3.png" alt=""></div>
+        <div class="image-wrapper">
+          <img src="/assets/images/visual-1.png" alt="" />
+        </div>
+        <div class="image-wrapper">
+          <img src="/assets/images/visual-2.png" alt="" />
+        </div>
+        <div class="image-wrapper">
+          <img src="/assets/images/visual-3.png" alt="" />
+        </div>
       </section>
       <footer>
         <div class="container" id="contact">
